=======
Changes
=======

0.2 (unreleased)
----------------

- Got rid of ``zope.app.zapi`` dependency.

- Got rid of ``zope.app.form`` dependency by requiring at least
  ``zope.formlib`` 4.0.

- Depending on ``zope.catalog`` instead of ``zope.app.catalog``.

- Fixed tests to run with ``zope.schema`` >= 3.6.

- Using Python's ``doctest`` module instead of depreacted
  ``zope.testing.doctest``.


0.1
---

- Exception views are now unicode aware. They used to break on translated
  content.

- Added use_default_for_not_selected to Union field to use default
  value even if sub field is not selected.