@@ -1,0 +1,22 @@
+##############################################################################
+#
+# Copyright (c) 2011 Zope Foundation and Contributors.
+# All Rights Reserved.
+#
+# This software is subject to the provisions of the Zope Public License,
+# Version 2.1 (ZPL).  A copy of the ZPL should accompany this distribution.
+# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
+# WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+# WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
+# FOR A PARTICULAR PURPOSE.
+#
+##############################################################################
+import zope.pagetemplate.pagetemplatefile
+
+
+class DummyMacros(object):
+    """Dummy standard macros to make zope.formlib pagetemplates happy."""
+
+    def __getitem__(self, key):
+        return zope.pagetemplate.pagetemplatefile.PageTemplateFile(
+            'dummy_macros.pt').macros['page']
